--- a/styles.css
+++ b/styles.css
@@ -1,60 +1,37 @@
-body {
-    color: white;
-    background: black;
-    margin: 0px;
-    font-family: "Chakra Petch", sans-serif;
-    margin-bottom: 100px;
-}
+<html lang="pt-BR">
 
-header {
-    border-bottom: solid 2px rgb(42, 122, 228);
-    padding: 20px;
-    font-size: 32px;
-    color: rgb(42, 122, 228);
-}
+<head>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
+        rel="stylesheet">
+    <title>brazzino</title>
+</head>
 
-.chamada {
-    background: rgb(184, 156, 213);
-    padding-bottom: 80px;
-    padding-top: 80px;
-    display: flex;
-    justify-content: center;
-}
+<body>
+    <header>BRAZZINO</header>
 
-.chamada-texto {
-    margin-right: 5%;
-}
+    <section class="chamada">
+        <div class="chamada-texto">
+            <h1>MEDLEY DOS FLUXOS</h1>
+            <p>MC Kitinho</p>
+        </div>
 
-h1 {
-    font-size: 40px;
-}
+        <div>
+            <iframe <iframe width="853" height="480" src="https://www.youtube.com/embed/Q0pqXK-3h5A?list=RDQ0pqXK-3h5A" title="MC Kitinho - Medley dos Fluxos (Video Clipe) DJ TH / NGDP" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+    </section>
 
-p {
-    font-size: 20px;
-}
+    <section class="categoria">
+        <h2>musicas</h2>
+        <div class="musicas">
+    
 
-.categoria-videos {
-    display: flex;
-    overflow-x: auto;
-    gap: 10px;
-}
+</body>
 
-.categoria {
-    padding-left: 20px;
-    padding-right: 20px;
-    margin-top: 50px;
-}
-
-.categoria-videos img {
-    opacity: 0.5;
-    height: 200px;
-}
-
-.categoria-videos img:hover {
-    opacity: 1.0;
-    border: 3px solid green;
-}
-
-.categoria h2 {
-    color: rgb(42, 122, 228);
-}
+</html>
